Added caching support to getTenant operation.
