# Solutions/Marain.Tenancy.OpenApi.Service/Marain/Tenancy/OpenApi/Configuration/TenantCacheConfiguration.cs
@@ -1,0 +1,19 @@
+﻿// <copyright file="TenantCacheConfiguration.cs" company="Endjin Limited">
+// Copyright (c) Endjin Limited. All rights reserved.
+// </copyright>
+
+namespace Marain.Tenancy.OpenApi.Configuration
+{
+    /// <summary>
+    /// Cache-related configuration for the tenancy service.
+    /// </summary>
+    public class TenantCacheConfiguration
+    {
+        /// <summary>
+        /// Gets or sets the value that will be returned in the cache-control header.
+        /// </summary>
+    #nullable disable
+        public string GetTenantResponseCacheControlHeaderValue { get; set; }
+    #nullable enable
+    }
+}
